Fix #31634: crash calling bpy.ops.transform.edge_slide() outside 3d view. Solution based on patch #31635 by Philipp Oeser.